Fix: position sign-up form higher so it doesn't overlap the footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,7 +308,7 @@ margin-top: 20px;}
 
     #signup-form {position: absolute;
     left: 10%;
-    top: 150px;
+    top: 130px;
     max-width: 400px;}
 
     .text-input:hover {border-color: #f16c6b;}
